# rknn-framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: async.hpp  async_detector.h  detector.h  model.h  yolo11.h  yolo11_async.h  yolov5.h  yolov5_async.h  yolov7.h  yolov7_async.h  yolov8.h  yolov8_async.h  yolov8_pose.h  yolov8_pose_async.h
include/base/: async.hpp  matmul.h
include/yolo11/: yolo11.h  yolo11_async.h
include/yolo_world/: clip_text.h
include/yolov5/: yolov5.h  yolov5_async.h
include/yolov5_seg/: yolov5_seg.h  yolov5_seg_async.h
include/yolov7/: yolov7.h  yolov7_async.h
include/yolov8/: yolov8.h  yolov8_async.h
include/yolov8_pose/: yolov8_pose.h  yolov8_pose_async.h
include/yolov8_seg/: yolov8_seg.h  yolov8_seg_async.h
src/: async_detector.cpp  detector.cpp  model.cpp  yolo11.cpp  yolo11_async.cpp  yolov5.cpp  yolov5_async.cpp  yolov7.cpp  yolov7_async.cpp  yolov8.cpp  yolov8_async.cpp  yolov8_pose.cpp  yolov8_pose_async.cpp
src/base/: matmul.cpp  model.cpp
src/yolo11/: yolo11.cpp  yolo11_async.cpp
src/yolo_world/: clip_text.cpp
src/yolov5/: yolov5.cpp  yolov5_async.cpp
src/yolov5_seg/: yolov5_seg.cpp  yolov5_seg_async.cpp
src/yolov7/: yolov7.cpp  yolov7_async.cpp
src/yolov8/: yolov8.cpp  yolov8_async.cpp
src/yolov8_pose/: yolov8_pose.cpp  yolov8_pose_async.cpp
src/yolov8_seg/: yolov8_seg.cpp  yolov8_seg_async.cpp
test/: matmul_demo.cpp  yolo11_demo.cpp  yolov5_demo.cpp  yolov5_seg_demo.cpp  yolov7_demo.cpp  yolov8_demo.cpp  yolov8_pose_demo.cpp  yolov8_seg_demo.cpp
weights/: yolov5n-seg-quantify.rknn
